--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 /** @format */
 
-@layer {
-  @import 'tailwindcss';
-  @import url(https://fonts.googleapis.com/css?family=Plus+Jakarta+Sans:200,300,regular,500,600,700,800,200italic,300italic,italic,500italic,600italic,700italic,800italic);
-}
+@import 'tailwindcss';
 
 @theme {
   --color-primary-white: #ffffff;
@@ -67,5 +64,5 @@
   --color-info-light-200: #bae5ff;
   --color-info-light-100: #dcf3ff;
 
-  --default-font-family: 'Plus Jakarta Sans', sans-serif;
+  --default-font-family: 'Plus Jakarta Sans';
 }
